Add elm-mdc (MDL) library & refactor app

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Elm hotloading dev environment</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" rel="stylesheet">
+    <link href="/lib/elm-mdc/material-components-web.css" rel="stylesheet">
+
+    <script src="/lib/elm-mdc/elm-mdc.js"></script>
   </head>
 
   <body>
